--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ width="300">
 
 <nav>
     <ul>
-        <li><a href="https://www.behance.net"> Our Work </a></li>
-        <li><a href="https://www.linkedin.com"
+        <li><a href="http://behance.net/alexdanylyshyn"> Our Work </a></li>
+        <li><a href="https://www.linkedin.com/in/alex-danylyshyn"
             target="_blank"> LinkedIn </a></li>
             <li><a href="mailto: adanylys@calpoly.edu"> Email Us </a></li>
     </ul> <!-- Aletered Text -->
