--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="https://use.typekit.net/tgx6duf.css">
+    <link rel="stylesheet" href="https://use.typekit.net/uub4yjs.css">
 <meta charset=”UTF-8”>
 
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
