--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <link rel="stylesheet" type="text/css" href="styles-contact.css">
 <link rel="stylesheet" href="https://use.typekit.net/uub4yjs.css">
+<link rel="stylesheet" href="https://use.typekit.net/tgx6duf.css">
 </head>
 
 <body>
