--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset=”UTF-8”>
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
 <title> Alex Danylyshyn | Contact Page </title>
-
+<link rel="stylesheet" href = "styles.css">
 <link rel="stylesheet" href="https://use.typekit.net/tgx6duf.css">
 
 </head>
