--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <head>
     
-<meta charset=”UTF-8”>
+<meta charset="UTF-8">
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
 <title> Alex Danylyshyn | Contact Page </title>
-<link rel="stylesheet" href = "styles.css">
+<link rel="stylesheet" type="text/css" href = "styles-contact.css">
+    
 <link rel="stylesheet" href="https://use.typekit.net/tgx6duf.css">
 
 </head>
