--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+<link rel="stylesheet" href="https://use.typekit.net/tgx6duf.css">
 <meta charset="UTF-8">
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
 <title> Alex Danylyshyn | Contact Page </title>
